
list(APPEND grpc_public_headers
	"${grpc_SOURCE_DIR}/include/grpc/grpc_security.h"
    "${grpc_SOURCE_DIR}/include/grpc/byte_buffer.h"
    "${grpc_SOURCE_DIR}/include/grpc/byte_buffer_reader.h"
    "${grpc_SOURCE_DIR}/include/grpc/compression.h"
    "${grpc_SOURCE_DIR}/include/grpc/grpc.h"
    "${grpc_SOURCE_DIR}/include/grpc/status.h"
	"${grpc_SOURCE_DIR}/include/grpc/census.h")

list(APPEND grpc_private_headers
    "${grpc_SOURCE_DIR}/src/core/httpcli/format_request.h"
    "${grpc_SOURCE_DIR}/src/core/httpcli/httpcli.h"
    "${grpc_SOURCE_DIR}/src/core/httpcli/httpcli_security_connector.h"
    "${grpc_SOURCE_DIR}/src/core/httpcli/parser.h"
    "${grpc_SOURCE_DIR}/src/core/security/auth_filters.h"
    "${grpc_SOURCE_DIR}/src/core/security/base64.h"
    "${grpc_SOURCE_DIR}/src/core/security/credentials.h"
    "${grpc_SOURCE_DIR}/src/core/security/json_token.h"
    "${grpc_SOURCE_DIR}/src/core/security/jwt_verifier.h"
    "${grpc_SOURCE_DIR}/src/core/security/secure_endpoint.h"
    "${grpc_SOURCE_DIR}/src/core/security/secure_transport_setup.h"
    "${grpc_SOURCE_DIR}/src/core/security/security_connector.h"
    "${grpc_SOURCE_DIR}/src/core/security/security_context.h"
    "${grpc_SOURCE_DIR}/src/core/tsi/fake_transport_security.h"
    "${grpc_SOURCE_DIR}/src/core/tsi/ssl_transport_security.h"
    "${grpc_SOURCE_DIR}/src/core/tsi/transport_security.h"
    "${grpc_SOURCE_DIR}/src/core/tsi/transport_security_interface.h"
    # "${grpc_SOURCE_DIR}/src/core/census/grpc_context.h"
    "${grpc_SOURCE_DIR}/src/core/channel/census_filter.h"
    "${grpc_SOURCE_DIR}/src/core/channel/channel_args.h"
    "${grpc_SOURCE_DIR}/src/core/channel/channel_stack.h"
    "${grpc_SOURCE_DIR}/src/core/channel/client_channel.h"
    "${grpc_SOURCE_DIR}/src/core/channel/compress_filter.h"
    "${grpc_SOURCE_DIR}/src/core/channel/connected_channel.h"
    "${grpc_SOURCE_DIR}/src/core/channel/context.h"
    "${grpc_SOURCE_DIR}/src/core/channel/http_client_filter.h"
    "${grpc_SOURCE_DIR}/src/core/channel/http_server_filter.h"
    "${grpc_SOURCE_DIR}/src/core/channel/noop_filter.h"
    "${grpc_SOURCE_DIR}/src/core/client_config/client_config.h"
    "${grpc_SOURCE_DIR}/src/core/client_config/connector.h"
    "${grpc_SOURCE_DIR}/src/core/client_config/lb_policies/pick_first.h"
    "${grpc_SOURCE_DIR}/src/core/client_config/lb_policy.h"
    "${grpc_SOURCE_DIR}/src/core/client_config/resolver.h"
    "${grpc_SOURCE_DIR}/src/core/client_config/resolver_factory.h"
    "${grpc_SOURCE_DIR}/src/core/client_config/resolver_registry.h"
    "${grpc_SOURCE_DIR}/src/core/client_config/resolvers/dns_resolver.h"
    # "${grpc_SOURCE_DIR}/src/core/client_config/resolvers/unix_resolver_posix.h"
    "${grpc_SOURCE_DIR}/src/core/client_config/subchannel.h"
    "${grpc_SOURCE_DIR}/src/core/client_config/subchannel_factory.h"
    "${grpc_SOURCE_DIR}/src/core/client_config/subchannel_factory_decorators/add_channel_arg.h"
    "${grpc_SOURCE_DIR}/src/core/client_config/subchannel_factory_decorators/merge_channel_args.h"
    "${grpc_SOURCE_DIR}/src/core/client_config/uri_parser.h"
    "${grpc_SOURCE_DIR}/src/core/compression/message_compress.h"
    "${grpc_SOURCE_DIR}/src/core/debug/trace.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/alarm.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/alarm_heap.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/alarm_internal.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/endpoint.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/endpoint_pair.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/fd_posix.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/iocp_windows.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/iomgr.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/iomgr_internal.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/iomgr_posix.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/pollset.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/pollset_kick_posix.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/pollset_posix.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/pollset_set.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/pollset_set_posix.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/pollset_set_windows.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/pollset_windows.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/resolve_address.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/sockaddr.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/sockaddr_posix.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/sockaddr_utils.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/sockaddr_win32.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/socket_utils_posix.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/socket_windows.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/tcp_client.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/tcp_posix.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/tcp_server.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/tcp_windows.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/time_averaged_stats.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/wakeup_fd_pipe.h"
    "${grpc_SOURCE_DIR}/src/core/iomgr/wakeup_fd_posix.h"
    "${grpc_SOURCE_DIR}/src/core/json/json.h"
    "${grpc_SOURCE_DIR}/src/core/json/json_common.h"
    "${grpc_SOURCE_DIR}/src/core/json/json_reader.h"
    "${grpc_SOURCE_DIR}/src/core/json/json_writer.h"
    "${grpc_SOURCE_DIR}/src/core/profiling/timers.h"
    "${grpc_SOURCE_DIR}/src/core/profiling/timers_preciseclock.h"
    "${grpc_SOURCE_DIR}/src/core/surface/byte_buffer_queue.h"
    "${grpc_SOURCE_DIR}/src/core/surface/call.h"
    "${grpc_SOURCE_DIR}/src/core/surface/channel.h"
    "${grpc_SOURCE_DIR}/src/core/surface/completion_queue.h"
    "${grpc_SOURCE_DIR}/src/core/surface/event_string.h"
    "${grpc_SOURCE_DIR}/src/core/surface/init.h"
    "${grpc_SOURCE_DIR}/src/core/surface/server.h"
    "${grpc_SOURCE_DIR}/src/core/surface/surface_trace.h"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/alpn.h"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/bin_encoder.h"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/frame.h"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/frame_data.h"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/frame_goaway.h"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/frame_ping.h"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/frame_rst_stream.h"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/frame_settings.h"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/frame_window_update.h"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/hpack_parser.h"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/hpack_table.h"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/http2_errors.h"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/huffsyms.h"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/incoming_metadata.h"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/internal.h"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/status_conversion.h"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/stream_encoder.h"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/stream_map.h"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/timeout_encoding.h"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/varint.h"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2_transport.h"
    "${grpc_SOURCE_DIR}/src/core/transport/connectivity_state.h"
    "${grpc_SOURCE_DIR}/src/core/transport/metadata.h"
    "${grpc_SOURCE_DIR}/src/core/transport/stream_op.h"
    "${grpc_SOURCE_DIR}/src/core/transport/transport.h"
    "${grpc_SOURCE_DIR}/src/core/transport/transport_impl.h"
	"${grpc_SOURCE_DIR}/src/core/census/context.h")

list(APPEND grpc_source_files
    "${grpc_SOURCE_DIR}/src/core/httpcli/format_request.c"
    "${grpc_SOURCE_DIR}/src/core/httpcli/httpcli.c"
    "${grpc_SOURCE_DIR}/src/core/httpcli/httpcli_security_connector.c"
    "${grpc_SOURCE_DIR}/src/core/httpcli/parser.c"
    "${grpc_SOURCE_DIR}/src/core/security/base64.c"
    "${grpc_SOURCE_DIR}/src/core/security/client_auth_filter.c"
    "${grpc_SOURCE_DIR}/src/core/security/credentials.c"
    "${grpc_SOURCE_DIR}/src/core/security/credentials_metadata.c"
    "${grpc_SOURCE_DIR}/src/core/security/credentials_posix.c"
    "${grpc_SOURCE_DIR}/src/core/security/credentials_win32.c"
    "${grpc_SOURCE_DIR}/src/core/security/google_default_credentials.c"
    "${grpc_SOURCE_DIR}/src/core/security/json_token.c"
    "${grpc_SOURCE_DIR}/src/core/security/jwt_verifier.c"
    "${grpc_SOURCE_DIR}/src/core/security/secure_endpoint.c"
    "${grpc_SOURCE_DIR}/src/core/security/secure_transport_setup.c"
    "${grpc_SOURCE_DIR}/src/core/security/security_connector.c"
    "${grpc_SOURCE_DIR}/src/core/security/security_context.c"
    "${grpc_SOURCE_DIR}/src/core/security/server_auth_filter.c"
    "${grpc_SOURCE_DIR}/src/core/security/server_secure_chttp2.c"
    "${grpc_SOURCE_DIR}/src/core/surface/init_secure.c"
    "${grpc_SOURCE_DIR}/src/core/surface/secure_channel_create.c"
    "${grpc_SOURCE_DIR}/src/core/tsi/fake_transport_security.c"
    "${grpc_SOURCE_DIR}/src/core/tsi/ssl_transport_security.c"
    "${grpc_SOURCE_DIR}/src/core/tsi/transport_security.c"
    "${grpc_SOURCE_DIR}/src/core/census/grpc_context.c"
    "${grpc_SOURCE_DIR}/src/core/channel/channel_args.c"
    "${grpc_SOURCE_DIR}/src/core/channel/channel_stack.c"
    "${grpc_SOURCE_DIR}/src/core/channel/client_channel.c"
    "${grpc_SOURCE_DIR}/src/core/channel/compress_filter.c"
    "${grpc_SOURCE_DIR}/src/core/channel/connected_channel.c"
    "${grpc_SOURCE_DIR}/src/core/channel/http_client_filter.c"
    "${grpc_SOURCE_DIR}/src/core/channel/http_server_filter.c"
    "${grpc_SOURCE_DIR}/src/core/channel/noop_filter.c"
    "${grpc_SOURCE_DIR}/src/core/client_config/client_config.c"
    "${grpc_SOURCE_DIR}/src/core/client_config/connector.c"
    "${grpc_SOURCE_DIR}/src/core/client_config/lb_policies/pick_first.c"
    "${grpc_SOURCE_DIR}/src/core/client_config/lb_policy.c"
    "${grpc_SOURCE_DIR}/src/core/client_config/resolver.c"
    "${grpc_SOURCE_DIR}/src/core/client_config/resolver_factory.c"
    "${grpc_SOURCE_DIR}/src/core/client_config/resolver_registry.c"
    "${grpc_SOURCE_DIR}/src/core/client_config/resolvers/dns_resolver.c"
    "${grpc_SOURCE_DIR}/src/core/client_config/resolvers/sockaddr_resolver.c"
    # "${grpc_SOURCE_DIR}/src/core/client_config/resolvers/unix_resolver_posix.c"
    "${grpc_SOURCE_DIR}/src/core/client_config/subchannel.c"
    "${grpc_SOURCE_DIR}/src/core/client_config/subchannel_factory.c"
    "${grpc_SOURCE_DIR}/src/core/client_config/subchannel_factory_decorators/add_channel_arg.c"
    "${grpc_SOURCE_DIR}/src/core/client_config/subchannel_factory_decorators/merge_channel_args.c"
    "${grpc_SOURCE_DIR}/src/core/client_config/uri_parser.c"
    "${grpc_SOURCE_DIR}/src/core/compression/algorithm.c"
    "${grpc_SOURCE_DIR}/src/core/compression/message_compress.c"
    "${grpc_SOURCE_DIR}/src/core/debug/trace.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/alarm.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/alarm_heap.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/endpoint.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/endpoint_pair_posix.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/endpoint_pair_windows.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/fd_posix.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/iocp_windows.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/iomgr.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/iomgr_posix.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/iomgr_windows.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/pollset_kick_posix.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/pollset_multipoller_with_epoll.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/pollset_multipoller_with_poll_posix.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/pollset_posix.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/pollset_set_posix.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/pollset_set_windows.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/pollset_windows.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/resolve_address_posix.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/resolve_address_windows.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/sockaddr_utils.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/socket_utils_common_posix.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/socket_utils_linux.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/socket_utils_posix.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/socket_windows.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/tcp_client_posix.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/tcp_client_windows.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/tcp_posix.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/tcp_server_posix.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/tcp_server_windows.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/tcp_windows.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/time_averaged_stats.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/wakeup_fd_eventfd.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/wakeup_fd_nospecial.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/wakeup_fd_pipe.c"
    "${grpc_SOURCE_DIR}/src/core/iomgr/wakeup_fd_posix.c"
    "${grpc_SOURCE_DIR}/src/core/json/json.c"
    "${grpc_SOURCE_DIR}/src/core/json/json_reader.c"
    "${grpc_SOURCE_DIR}/src/core/json/json_string.c"
    "${grpc_SOURCE_DIR}/src/core/json/json_writer.c"
    "${grpc_SOURCE_DIR}/src/core/profiling/basic_timers.c"
    "${grpc_SOURCE_DIR}/src/core/profiling/stap_timers.c"
    "${grpc_SOURCE_DIR}/src/core/surface/byte_buffer.c"
    "${grpc_SOURCE_DIR}/src/core/surface/byte_buffer_queue.c"
    "${grpc_SOURCE_DIR}/src/core/surface/byte_buffer_reader.c"
    "${grpc_SOURCE_DIR}/src/core/surface/call.c"
    "${grpc_SOURCE_DIR}/src/core/surface/call_details.c"
    "${grpc_SOURCE_DIR}/src/core/surface/call_log_batch.c"
    "${grpc_SOURCE_DIR}/src/core/surface/channel.c"
    "${grpc_SOURCE_DIR}/src/core/surface/channel_create.c"
    "${grpc_SOURCE_DIR}/src/core/surface/completion_queue.c"
    "${grpc_SOURCE_DIR}/src/core/surface/event_string.c"
    "${grpc_SOURCE_DIR}/src/core/surface/init.c"
    "${grpc_SOURCE_DIR}/src/core/surface/lame_client.c"
    "${grpc_SOURCE_DIR}/src/core/surface/metadata_array.c"
    "${grpc_SOURCE_DIR}/src/core/surface/server.c"
    "${grpc_SOURCE_DIR}/src/core/surface/server_chttp2.c"
    "${grpc_SOURCE_DIR}/src/core/surface/server_create.c"
    "${grpc_SOURCE_DIR}/src/core/surface/surface_trace.c"
    "${grpc_SOURCE_DIR}/src/core/surface/version.c"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/alpn.c"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/bin_encoder.c"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/frame_data.c"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/frame_goaway.c"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/frame_ping.c"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/frame_rst_stream.c"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/frame_settings.c"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/frame_window_update.c"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/hpack_parser.c"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/hpack_table.c"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/huffsyms.c"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/incoming_metadata.c"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/parsing.c"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/status_conversion.c"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/stream_encoder.c"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/stream_lists.c"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/stream_map.c"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/timeout_encoding.c"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/varint.c"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2/writing.c"
    "${grpc_SOURCE_DIR}/src/core/transport/chttp2_transport.c"
    "${grpc_SOURCE_DIR}/src/core/transport/connectivity_state.c"
    "${grpc_SOURCE_DIR}/src/core/transport/metadata.c"
    "${grpc_SOURCE_DIR}/src/core/transport/stream_op.c"
    "${grpc_SOURCE_DIR}/src/core/transport/transport.c"
    "${grpc_SOURCE_DIR}/src/core/transport/transport_op_string.c"
    "${grpc_SOURCE_DIR}/src/core/census/context.c"
    "${grpc_SOURCE_DIR}/src/core/census/initialize.c")

if(MSVC)
	list(APPEND compile_definitions
		_WINSOCK_DEPRECATED_NO_WARNINGS)
	list(APPEND additional_compile_flags
		"/wd4267 /wd4244 /wd4090")
endif()

list(APPEND inc_dirs
	"${grpc_SOURCE_DIR}"
	"${grpc_SOURCE_DIR}/include")

if(WIN32)
	list(APPEND additional_libs
		"ws2_32.lib")
endif()

if(UNIX)
    list(APPEND additional_libs
        "dl")
endif()

add_library(grpc ${grpc_public_headers} ${grpc_private_headers} ${grpc_source_files})
target_link_libraries(grpc gpr ssleay32 libeay32 zlib ${additional_libs})
set_target_properties(grpc PROPERTIES
	COMPILE_DEFINITIONS "${compile_definitions}"
	COMPILE_FLAGS "${additional_compile_flags}"
	INCLUDE_DIRECTORIES "${inc_dirs}")

install(TARGETS grpc
    EXPORT ${CMAKE_PROJECT_NAME}Config
    LIBRARY DESTINATION lib COMPONENT dev
    ARCHIVE DESTINATION lib COMPONENT dev
    RUNTIME DESTINATION bin COMPONENT bin)
